@@ -2138,6 +2138,7 @@ func honkhonkline() {
 func apihandler(w http.ResponseWriter, r *http.Request) {
 	u := login.GetUserInfo(r)
 	userid := u.UserID
+	user, _ := butwhatabout(u.Username)
 	action := r.FormValue("action")
 	wait, _ := strconv.ParseInt(r.FormValue("wait"), 10, 0)
 	log.Printf("api request '%s' on behalf of %s", action, u.Username)
@@ -2175,6 +2176,13 @@ func apihandler(w http.ResponseWriter, r *http.Request) {
 		j := junk.New()
 		j["honks"] = honks
 		j.Write(w)
+	case "sendactivity":
+		public := r.FormValue("public") == "1"
+		rcpts := boxuprcpts(user, r.Form["rcpt"], public)
+		msg := []byte(r.FormValue("msg"))
+		for rcpt := range rcpts {
+			go deliverate(0, userid, rcpt, msg)
+		}
 	default:
 		http.Error(w, "unknown action", http.StatusNotFound)
 		return
