@@ -2,6 +2,8 @@ changelog
 
 -- next
 
++ A raw sendactivity API action for the bold.
+
 + More flexible meme names.
 
 -- 0.8.5 Turnkey Blaster
